Added heroku sorry

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,6 +19,10 @@ IceWine
         <a href="mailto:trlemburg+icewine@gmail.com">email</a>.
       </p>
     </div>
+    <div style="position: absolute; bottom: 5px; font-size: 8px;">
+      Sorry if the page loaded slowly; it's running on a free
+      heroku dyno so sometimes it takes a little bit to wake up.
+    </div>
   </div>
 </body>
 </html>
