--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,7 @@
 IceWine
 </title>
 <link rel="stylesheet" href="/css/main.css"></script>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <div class="main">
