Updated description, email

--- a/views/index.erb
+++ b/views/index.erb
@@ -13,11 +13,11 @@ IceWine
     </div>
     <div>
       <p>
-        IceWine is a startup created in Lincoln, Nebraska for the purpose
-        of developing websites, businesses, and creations
+        IceWine is a sports and technology startup created in Lincoln, Nebraska. We 
+        develop websites, businesses, and creations
         that help the state of
-        Nebraska. For more information, please
-        <a href="mailto:trlemburg+icewine@gmail.com">email</a>.
+        Nebraska and advance sports and technology. For more information, please
+        <a href="mailto:icewineproductions@gmail.com">email</a>.
       </p>
     </div>
     <div style="position: absolute; bottom: 5px; font-size: 8px;">
